--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.mustache.suffix=.html
+spring.datasource.url=jdbc:mysql://localhost:3306/tik_tak_ticket
+spring.datasource.username=root
+spring.datasource.password=
