--- a/ServicioInterno/src/main/resources/application.properties
+++ b/ServicioInterno/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.datasource.url=jdbc:mysql://localhost/tic_tak_ticket?useUnicode=true&useJ
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-server.port=8443
-server.ssl.key-store=classpath:keystore.jks
-server.ssl.key-store-password=password
-server.ssl.key-password=secret
+server.port=8080
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=TicTakTicket2020@gmail.com
+spring.mail.password=arribaespana23F
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
