Arreglado problemas con los mails en vagrant
Arreglado un problema a la hora de enviar un email si su usaba vagrant como máquina virtual

--- a/ServicioInterno/src/main/resources/application.properties
+++ b/ServicioInterno/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.mail.username=TicTakTicket2020@gmail.com
 spring.mail.password=arribaespana23F
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
