--- a/PracticaDaD/src/main/resources/application.properties
+++ b/PracticaDaD/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.mustache.suffix=.html
-spring.datasource.url=jdbc:mysql://localhost/tic_tak_ticket?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://db/tic_tak_ticket?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
