--- a/PracticaDaD/pom.xml
+++ b/PracticaDaD/pom.xml
@@ -59,9 +59,15 @@
 		    <version>1.3.5.RELEASE</version>
 		</dependency>
 		<dependency>
-			<groupId>com.hazelcast</groupId>
-			<artifactId>hazelcast</artifactId>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-redis</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <type>jar</type>
+		</dependency>
+		
 		
 	
 	</dependencies>
