--- a/PracticaDaD/pom.xml
+++ b/PracticaDaD/pom.xml
@@ -57,15 +57,9 @@
 		    <groupId>org.springframework.session</groupId>
 		    <artifactId>spring-session</artifactId>
 		    <version>1.3.5.RELEASE</version>
-		</dependency>
-		<dependency>
+		</dependency><dependency>
 		    <groupId>org.springframework.data</groupId>
 		    <artifactId>spring-data-redis</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>redis.clients</groupId>
-		    <artifactId>jedis</artifactId>
-		    <type>jar</type>
 		</dependency>
 		
 		
