Cache funcional distribuida

--- a/PracticaDaD/pom.xml
+++ b/PracticaDaD/pom.xml
@@ -59,9 +59,18 @@
 		    <version>1.3.5.RELEASE</version>
 		</dependency>
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast-spring</artifactId>
+        </dependency>
+		
 		
 	
 	</dependencies>
