Inclusion MySQL en haproxy
Haproxy maneja tambien las peticiones de MySQL

--- a/dockers/myHaproxy/haproxy.cfg
+++ b/dockers/myHaproxy/haproxy.cfg
@@ -20,6 +20,11 @@ frontend api_rest
     mode http
     default_backend servicio_interno
 
+frontend mysql-service
+    bind *:33060
+    mode tcp
+    default_backend mysql-bc
+
 backend tic_tak_ticket
     mode http
     balance roundrobin
@@ -38,3 +43,8 @@ backend servicio_interno
     server rest1 api1:8087 check
     server rest2 api2:8088 check
 
+backend mysql-bc
+    mode tcp
+    option mysql-check user root
+    balance roundrobin
+    server master db:3306 check
