--- a/PracticaDaD/src/main/resources/application.properties
+++ b/PracticaDaD/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.mustache.suffix=.html
-spring.datasource.url=jdbc:mysql://db/tic_tak_ticket?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://myhaproxy:33060/tic_tak_ticket?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
@@ -8,3 +8,5 @@ server.ssl.key-store=classpath:keystore.jks
 server.ssl.key-store-password=password
 server.ssl.key-password=secret
 spring.cache.type=hazelcast
+spring.datasource.hikari.connection-timeout=3000	
+spring.datasource.hikari.idle-timeout=3000
