--- a/ServicioInterno/src/main/resources/application.properties
+++ b/ServicioInterno/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://db/tic_tak_ticket?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://myhaproxy:33060/tic_tak_ticket?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
@@ -10,3 +10,5 @@ spring.mail.password=arribaespana23F
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.datasource.hikari.connection-timeout=3000	
+spring.datasource.hikari.idle-timeout=3000
